--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,33 +1,25 @@
-# Server Port
+# Server Configuration
 server.port=5000
 
-# MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/auth_db?createDatabaseIfNotExist=true&useSSL=false
+# Spring MVC Configuration
+spring.mvc.view.prefix=classpath:/templates/
+spring.mvc.view.suffix=.html
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/auth_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA / Hibernate
+# JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 
-# Thymeleaf
-spring.thymeleaf.cache=false
-spring.thymeleaf.check-template=true
-spring.thymeleaf.check-template-location=true
-spring.thymeleaf.enabled=true
-spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.mode=HTML
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-
 # JWT Configuration
-jwt.secret=secretkeyforjwtauthenticationlongandcomplexstring123456789
-jwt.expiration=86400
+jwt.secret=jwtAuthSecretKey2023
+jwt.expiration=86400000  # 24 hours in milliseconds
 
 # Logging
 logging.level.org.springframework.security=DEBUG
-
-# Allow circular references as a fallback
-spring.main.allow-circular-references=true
+logging.level.com.auth.app=DEBUG
